--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 const socket = io();
                 $('#messenger').submit(function(){
                     socket.emit('chat message',$('#m').val());
+                    $('#messages').append($('<li>').text($('#m').val()));
                     $('#m').val('');
                     return false;
                 });
