--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <h4 id="name-status"></h4>
+        <h4>Online Users: </h4>
+        <ul id="online"></ul>
         <ul id="messages">
 
         </ul>
@@ -56,6 +58,21 @@
                 })
                 socket.on('typing message',n => {
                     $('#messages').append($(`<li class="${n}typing">`).text(`${n} is typing...`));
+                })
+                socket.on('user connected',n => {
+                    // console.log('user connected');
+                    // console.log(n);
+                    // $('#online-users').append(`<li class="${n}online>${n}</li>"`);
+                    $('#messages').append($('<li>').text(`${n} connected`));
+                })
+                socket.on('name change', names => {
+                    let n = JSON.parse(names);
+                    $('#online').append(`<li class="${n.new}online">${n.new}</li>`);
+                    $('#messages').append($('<li>').text(`${n.old} changed name to: ${n.new}`));
+                })
+                socket.on('user disconnected',n => {
+                    $(`.${n}online`).remove();
+                    $('#messages').append($('<li>').text(`${n} disconnected`));
                 })
             });
         </script>
