--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html>
 
 <head>
-    <title>
-        Socket.IO chat
-    </title>
+    <title>Socket.IO chat</title>
     <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 
 <body>
     <h4 id="name-status"></h4>
-    <h4>Online Users: </h4>
-    <ul id="online"></ul>
-    <ul id="messages">
-
-    </ul>
+    <div id="online">
+        <h4>Online Users: </h4>
+        <p>click one of these users to send a pm</p>
+    </div>
+    <ul id="messages"></ul>
     <div class="forms">
         <form id="messenger" action="">
             <input id="m" autocomplete="off" />
@@ -28,13 +26,15 @@
                 Change nickname
             </button>
         </form>
+        <form id="pm" action="">
+            <input id="p" />
+            <button>
+                Send PM to Nobody
+            </button>
+        </form>
     </div>
-    <script src="/socket.io/socket.io.js">
-
-    </script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js">
-
-    </script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
         $(function () {
             const socket = io();
@@ -53,6 +53,11 @@
                 $('#n').val('');
                 return false;
             })
+            $('#online').click(event => {
+                console.log('clicked user');
+                console.log(event.target.id);
+                $('#pm button').text(`Send PM to ${event.target.id}`);
+            })
             socket.on('chat message', msg => {
                 let message = JSON.parse(msg);
                 $(`.${message.n}typing`).remove();
@@ -62,18 +67,16 @@
                 $('#messages').append($(`<li class="${n}typing">`).text(`${n} is typing...`));
             })
             socket.on('user connected', n => {
-                // console.log('user connected');
-                // console.log(n);
-                // $('#online-users').append(`<li class="${n}online>${n}</li>"`);
                 $('#messages').append($('<li>').text(`${n} connected`));
             })
             socket.on('name change', names => {
                 let n = JSON.parse(names);
-                $('#online').append(`<li class="${n.new}online">${n.new}</li>`);
+                $(`#${n.old}`).remove();
+                $('#online').append(`<div class="user" id="${n.new}">${n.new}</div>`);
                 $('#messages').append($('<li>').text(`${n.old} changed name to: ${n.new}`));
             })
             socket.on('user disconnected', n => {
-                $(`.${n}online`).remove();
+                $(`#${n}`).remove();
                 $('#messages').append($('<li>').text(`${n} disconnected`));
             })
         });
